samples/_failures_safe/1760959790_ac9270_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99ceaf81.c: In function ‘main’:
./samples/SAFE/__tmp_99ceaf81.c:144:29: error: expected ‘)’ at end of input
  144 |         if (line_count > 100
      |            ~                ^
      |                             )
./samples/SAFE/__tmp_99ceaf81.c:144:9: error: expected declaration or statement at end of input
  144 |         if (line_count > 100
      |         ^~
./samples/SAFE/__tmp_99ceaf81.c:144:9: error: expected declaration or statement at end of input
